--- a/src/app/pages/main-page/list-users/list-users.component.html
+++ b/src/app/pages/main-page/list-users/list-users.component.html
@@ -7,6 +7,7 @@
         <p class="card-text"> {{user.email}}
         </p>
         <a href="#" class="btn btn-primary">Go to user</a>
+        <button class="btn btn-danger ml-2" (click)="onDeleteUser(user)">delete</button>
       </div>
     </div>
   </li>
