--- a/src/app/pages/main-page/list-users/list-users.component.html
+++ b/src/app/pages/main-page/list-users/list-users.component.html
@@ -6,7 +6,7 @@
         <h5 class="card-title">{{user | fio}}</h5>
         <p class="card-text"> {{user.email}}
         </p>
-        <a href="#" class="btn btn-primary">Go to user</a>
+        <a [href]="'/user/' + user.id" class="btn btn-primary">Go to user</a>
         <button class="btn btn-danger ml-2" (click)="onDeleteUser(user)">delete</button>
       </div>
     </div>
