added logout and routing

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,4 +1,6 @@
 <div class="container pt-3">
+  <div class="text-right mb-3"><a (click)='logout()' class="btn btn-secondary">Logout</a>
+  </div>
   <app-list-users></app-list-users>
   <app-list-resource></app-list-resource>
 </div>
