change detetion strategy on main page

--- a/src/app/pages/main-page/list-users/list-users.component.html
+++ b/src/app/pages/main-page/list-users/list-users.component.html
@@ -1,5 +1,5 @@
-<ul class="d-flex justify-content-between align-self-stretch">
-  <li *ngFor="let user of users" class="align-self-stretch" style="width: 15rem;">
+<ul class="d-flex justify-content-between flex-wrap">
+  <li *ngFor="let user of users" class="align-self-stretch mt-2" style="width: 15rem;">
     <div class="card">
       <img class="card-img-top" [src]="user.avatar" alt="image is not loaded" style="height: 15rem;">
       <div class="card-body">
