--- a/src/app/pages/user-page/user-page.component.html
+++ b/src/app/pages/user-page/user-page.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container w-50">
   <h1 class="text-center">Страница пользователя</h1>
   <div *ngIf="user">
     <img class="d-block" [src]="user.avatar" alt="image is not loaded" style="height: 15rem;">
